# llm-prompt-lab

./: .gitignore  LICENSE  README.md
backend/: .env.example  pyproject.toml
backend/app/: config.py  database.py  llm_client.py  main.py  models.py  schemas.py
backend/app/routers/: experiments.py  models.py  runs.py
backend/tests/: test_api.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/components/: Layout.tsx  NewExperimentModal.tsx  NewVariantModal.tsx  StarRating.tsx  StatsCharts.tsx
frontend/src/pages/: ExperimentDetailPage.tsx  ExperimentsPage.tsx  RunsPage.tsx
